--- a/app/src/main/res/drawable/bg_curve_border_black.xml
+++ b/app/src/main/res/drawable/bg_curve_border_black.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="1dp"
+        android:color="@android:color/black"/>
+    <solid
+        android:color="@android:color/white"/>
+    <corners
+        android:radius="15dp"/>
 
-</selector>
+</shape>
