--- a/app/src/main/res/layout/activity_repolist.xml
+++ b/app/src/main/res/layout/activity_repolist.xml
@@ -20,7 +20,9 @@
             android:id="@+id/arl_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="15dp"/>
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:paddingTop="15dp"/>
     </LinearLayout>
 
     <include layout="@layout/view_progress"/>
