--- a/app/src/main/res/layout/card_picname.xml
+++ b/app/src/main/res/layout/card_picname.xml
@@ -17,6 +17,7 @@
         android:id="@+id/cpn_name"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
