--- a/app/src/main/res/layout/card_picname.xml
+++ b/app/src/main/res/layout/card_picname.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cpn_container"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent">
 
@@ -10,6 +10,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:contentDescription="@string/image_of_user"/>
 
@@ -17,10 +18,11 @@
         android:id="@+id/cpn_name"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
-        android:ellipsize="end"/>
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
