--- a/app/src/main/res/layout/card_repo_detailed.xml
+++ b/app/src/main/res/layout/card_repo_detailed.xml
@@ -3,7 +3,8 @@
     android:id="@+id/crd_container"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_curve_border_black">
+    android:background="@drawable/bg_curve_border_black"
+    android:layout_marginBottom="5dp">
 
     <FrameLayout
         android:layout_width="wrap_content"
