--- a/app/src/main/res/layout/activity_repoview.xml
+++ b/app/src/main/res/layout/activity_repoview.xml
@@ -8,12 +8,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <include layout="@layout/view_toolbar"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/arv_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"/>
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"/>
 
         <WebView
             android:id="@+id/arv_webview"
